docs/api/0.2.0/ironwood/ds/LongMap.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.0**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# LongMap

**Class** · `ironwood.ds.LongMap`

```java
public class LongMap<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)


## Member summary

[Fields](#fields) · [Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`DEFAULT_INITIAL_CAPACITY`](#member-DEFAULT_INITIAL_CAPACITY) |  |
| [`DEFAULT_LOAD_FACTOR`](#member-DEFAULT_LOAD_FACTOR) |  |
| [`LongMap()`](#member-LongMap-28--29-) |  |
| [`LongMap(int)`](#member-LongMap-28-int-29-) |  |
| [`LongMap(int,float)`](#member-LongMap-28-int-2c-float-29-) |  |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) |  |
| [`getLoadFactor()`](#member-getLoadFactor-28--29-) |  |
| [`getCurrIteratorKey()`](#member-getCurrIteratorKey-28--29-) |  |
| [`size()`](#member-size-28--29-) |  |
| [`isEmpty()`](#member-isEmpty-28--29-) |  |
| [`equals(Object)`](#member-equals-28-Object-29-) |  |
| [`hashCode()`](#member-hashCode-28--29-) |  |
| [`toString()`](#member-toString-28--29-) |  |
| [`containsKey(long)`](#member-containsKey-28-long-29-) |  |
| [`get(long)`](#member-get-28-long-29-) |  |
| [`put(long,E)`](#member-put-28-long-2c-E-29-) |  |
| [`remove(long)`](#member-remove-28-long-29-) |  |
| [`clear()`](#member-clear-28--29-) |  |
| [`iterator()`](#member-iterator-28--29-) |  |

## Fields

<a name="member-DEFAULT_INITIAL_CAPACITY"></a>

### `DEFAULT_INITIAL_CAPACITY`

```java
public static final int DEFAULT_INITIAL_CAPACITY = 128;
```


[Back to member summary](#member-summary)

<a name="member-DEFAULT_LOAD_FACTOR"></a>

### `DEFAULT_LOAD_FACTOR`

```java
public static final float DEFAULT_LOAD_FACTOR = 0.80f;
```


[Back to member summary](#member-summary)

## Constructors

<a name="member-LongMap-28--29-"></a>

### `LongMap()`

```java
public LongMap()
```


[Back to member summary](#member-summary)

<a name="member-LongMap-28-int-29-"></a>

### `LongMap(int)`

```java
public LongMap(int initialCapacity)
```


[Back to member summary](#member-summary)

<a name="member-LongMap-28-int-2c-float-29-"></a>

### `LongMap(int,float)`

```java
public LongMap(int initialCapacity, float loadFactor)
```


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```


[Back to member summary](#member-summary)

<a name="member-getLoadFactor-28--29-"></a>

### `getLoadFactor()`

```java
public float getLoadFactor()
```


[Back to member summary](#member-summary)

<a name="member-getCurrIteratorKey-28--29-"></a>

### `getCurrIteratorKey()`

```java
public long getCurrIteratorKey()
```


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```


[Back to member summary](#member-summary)

<a name="member-containsKey-28-long-29-"></a>

### `containsKey(long)`

```java
public boolean containsKey(long key)
```


[Back to member summary](#member-summary)

<a name="member-get-28-long-29-"></a>

### `get(long)`

```java
public E get(long key)
```


[Back to member summary](#member-summary)

<a name="member-put-28-long-2c-E-29-"></a>

### `put(long,E)`

```java
public E put(long key, E value)
```


[Back to member summary](#member-summary)

<a name="member-remove-28-long-29-"></a>

### `remove(long)`

```java
public E remove(long key)
```


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
