docs/api/0.2.2-beta/ironwood/ds/LongMap.md
<!-- Generated by IronDocs. Do not edit. -->

![IronDocs API reference](../../assets/irondocs.svg)

**Version 0\.2\.2\-beta**

[All packages](../../README.md) / [`ironwood.ds`](package-summary.md)

# LongMap

**Class** · `ironwood.ds.LongMap`

```java
public class LongMap<E extends Object> implements Iterable<E>
```

**Implements:** [`Iterable<E>`](../lang/Iterable.md)

Maps long keys to values.


## Member summary

[Fields](#fields) · [Constructors](#constructors) · [Methods](#methods)

| Member | Description |
| --- | --- |
| [`DEFAULT_INITIAL_CAPACITY`](#member-DEFAULT_INITIAL_CAPACITY) | The default initial capacity. |
| [`DEFAULT_LOAD_FACTOR`](#member-DEFAULT_LOAD_FACTOR) | The default load factor. |
| [`LongMap()`](#member-LongMap-28--29-) | Creates a new LongMap. |
| [`LongMap(int)`](#member-LongMap-28-int-29-) | Creates a new LongMap. |
| [`LongMap(int,float)`](#member-LongMap-28-int-2c-float-29-) | Creates a new LongMap. |
| [`getInitialCapacity()`](#member-getInitialCapacity-28--29-) | Returns the initial capacity. |
| [`getLoadFactor()`](#member-getLoadFactor-28--29-) | Returns the load factor. |
| [`getCurrIteratorKey()`](#member-getCurrIteratorKey-28--29-) | Returns the curr iterator key. |
| [`size()`](#member-size-28--29-) | Returns the number of stored values. |
| [`isEmpty()`](#member-isEmpty-28--29-) | Returns whether this value is empty. |
| [`equals(Object)`](#member-equals-28-Object-29-) | Tests this value for equality with another object. |
| [`hashCode()`](#member-hashCode-28--29-) | Returns this value's hash code. |
| [`toString()`](#member-toString-28--29-) | Returns a textual representation of this value. |
| [`containsKey(long)`](#member-containsKey-28-long-29-) | Returns whether a value is associated with the supplied key. |
| [`containsValue(E)`](#member-containsValue-28-E-29-) | Returns whether the supplied value is present. |
| [`get(long)`](#member-get-28-long-29-) | Returns the requested value. |
| [`put(long,E)`](#member-put-28-long-2c-E-29-) | Associates the supplied key with the supplied value. |
| [`remove(long)`](#member-remove-28-long-29-) | Removes the requested value or entry. |
| [`clear()`](#member-clear-28--29-) | Removes all stored values. |
| [`iterator()`](#member-iterator-28--29-) | Returns an iterator over this value's elements. |

## Fields

<a name="member-DEFAULT_INITIAL_CAPACITY"></a>

### `DEFAULT_INITIAL_CAPACITY`

```java
public static final int DEFAULT_INITIAL_CAPACITY = 128;
```

The default initial capacity.


[Back to member summary](#member-summary)

<a name="member-DEFAULT_LOAD_FACTOR"></a>

### `DEFAULT_LOAD_FACTOR`

```java
public static final float DEFAULT_LOAD_FACTOR = 0.80f;
```

The default load factor.


[Back to member summary](#member-summary)

## Constructors

<a name="member-LongMap-28--29-"></a>

### `LongMap()`

```java
public LongMap()
```

Creates a new LongMap.


[Back to member summary](#member-summary)

<a name="member-LongMap-28-int-29-"></a>

### `LongMap(int)`

```java
public LongMap(int initialCapacity)
```

Creates a new LongMap.


[Back to member summary](#member-summary)

<a name="member-LongMap-28-int-2c-float-29-"></a>

### `LongMap(int,float)`

```java
public LongMap(int initialCapacity, float loadFactor)
```

Creates a new LongMap.


[Back to member summary](#member-summary)

## Methods

<a name="member-getInitialCapacity-28--29-"></a>

### `getInitialCapacity()`

```java
public int getInitialCapacity()
```

Returns the initial capacity.


[Back to member summary](#member-summary)

<a name="member-getLoadFactor-28--29-"></a>

### `getLoadFactor()`

```java
public float getLoadFactor()
```

Returns the load factor.


[Back to member summary](#member-summary)

<a name="member-getCurrIteratorKey-28--29-"></a>

### `getCurrIteratorKey()`

```java
public long getCurrIteratorKey()
```

Returns the curr iterator key.


[Back to member summary](#member-summary)

<a name="member-size-28--29-"></a>

### `size()`

```java
public int size()
```

Returns the number of stored values.


[Back to member summary](#member-summary)

<a name="member-isEmpty-28--29-"></a>

### `isEmpty()`

```java
public boolean isEmpty()
```

Returns whether this value is empty.


[Back to member summary](#member-summary)

<a name="member-equals-28-Object-29-"></a>

### `equals(Object)`

```java
@Override
public boolean equals(Object otherObject)
```

Tests this value for equality with another object.


[Back to member summary](#member-summary)

<a name="member-hashCode-28--29-"></a>

### `hashCode()`

```java
@Override
public int hashCode()
```

Returns this value's hash code.


[Back to member summary](#member-summary)

<a name="member-toString-28--29-"></a>

### `toString()`

```java
@Override
public String toString()
```

Returns a textual representation of this value.


[Back to member summary](#member-summary)

<a name="member-containsKey-28-long-29-"></a>

### `containsKey(long)`

```java
public boolean containsKey(long key)
```

Returns whether a value is associated with the supplied key.


[Back to member summary](#member-summary)

<a name="member-containsValue-28-E-29-"></a>

### `containsValue(E)`

```java
public boolean containsValue(E value)
```

Returns whether the supplied value is present.


[Back to member summary](#member-summary)

<a name="member-get-28-long-29-"></a>

### `get(long)`

```java
public E get(long key)
```

Returns the requested value.


[Back to member summary](#member-summary)

<a name="member-put-28-long-2c-E-29-"></a>

### `put(long,E)`

```java
public E put(long key, E value)
```

Associates the supplied key with the supplied value.


[Back to member summary](#member-summary)

<a name="member-remove-28-long-29-"></a>

### `remove(long)`

```java
public E remove(long key)
```

Removes the requested value or entry.


[Back to member summary](#member-summary)

<a name="member-clear-28--29-"></a>

### `clear()`

```java
public void clear()
```

Removes all stored values.


[Back to member summary](#member-summary)

<a name="member-iterator-28--29-"></a>

### `iterator()`

```java
@Override
public Iterator<E> iterator()
```

Returns an iterator over this value's elements.


[Back to member summary](#member-summary)

---

Generated from Ironwood source comments with **IronDocs**.
